<resources>
    <string name="app_name">Ethereum</string>
    <string name="eth_hint_string">0 . 0 E T H</string>
    <string name="usd_hint_string">= 0 . 0 U S D</string>
    <string name="send_toolbar_title">Send</string>
    <string name="enter_pin_toolbar_title">Enter pin</string>
    <string name="receive_toolbar_title">Receive</string>
    <string name="transaction_history_title">T r a n s a c t i o n \u0020H i s t o r y</string>
    <string name="date_time_string">28 July 2017 | 8:36 am</string>
    <string name="eth_default_string">0 . 0 8 4 3 1 6 E T H</string>
    <string name="permission_info_string">App needs camera to scar QR code</string>
    <string name="scanning_qrcode_string">Error occurred while scanning</string>
    <string name="copy_onsuccess_string">Ethereum Address copied to clipboard</string>
    <string name="copy_unsuccessful_string">No Ethereum Address found !</string>
    <string name="permission_enable_string">ENABLE</string>
    <string name="qrcode_label_string">label</string>
    <string name="blank_string" />
    <string name="screen_not_provided_toast_string">No Screen Given</string>
    <string name="press_back_to_exit_toast_string">Press Back again to Exit.</string>
    <string name="successful_transaction_toast_string">Transaction Successful !</string>
    <string name="incomplete_pin_toast_string">Provide Complete Pin !</string>
    <string name="complete_pin_toast_string">Pin is entered completely</string>
    <string name="one_string">1</string>
    <string name="two_string">2</string>
    <string name="three_string">3</string>
    <string name="four_string">4</string>
    <string name="five_string">5</string>
    <string name="six_string">6</string>
    <string name="seven_string">7</string>
    <string name="eight_string">8</string>
    <string name="nine_string">9</string>
    <string name="zero_string">0</string>
    <string name="dot_string">.</string>
    <string name="unsuccessful_transaction_toast_string">Transaction UnSuccessful !</string>
    <string name="provide_amount_toast_string">Provide amount !</string>
    <string name="enter_amount_toast_string">Enter Amount</string>
    <string name="invalid_amount_toast_string">Invalid Amount</string>
    <string name="max_limit_toast_string">Max limit reached !</string>
    <string name="b_t_c">B T C</string>
    <string name="e_t_h">E T H</string>
    <string name="l_t_c">L T C</string>
    <string name="s_t_m">S T M</string>
    <string name="d_s_h">D S H</string>
    <string name="_1_e_t_c">1 E T C =</string>
    <string name="e_n_t_h_e_r_e_u_m_b_a_l_a_n_c_e">e n t h e r e u m b a l a n c e</string>
    <string name="_2_3_9_7_6_4_2">2 3 . 9 7 6 4 2</string>
    <string name="_5_9_7_6_4_7">$ 5 9 7 6 . 4 7</string>
    <string name="_0_0_9_1_6_b_t_c">0 . 0 9 1 6 B T C</string>
    <string name="d_a_y">D A Y</string>
    <string name="_0_9_8">0 . 9 8 %</string>
    <string name="w_e_e_k">W E E K</string>
    <string name="_2_6_5">2 . 6 5 %</string>
    <string name="send">send</string>
    <string name="receive">receive</string>
    <string name="buy_sell">buy / sell</string>
    <string name="_0x3635774825368dd25">0x3635774825368dd25</string>
    <string name="your_ethereum_address">your ethereum address</string>
    <string name="your_ethereum_qr_code">your ethereum qr code</string>
</resources>
