<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.somu.darwinslab.ethereum.activity.EnterPinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/commom_toolbar"
            layout="@layout/common_toolbar" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            tools:context="com.somu.darwinassignmentapplication.activity.EnterPinActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iv_pin_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/holocircle"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:id="@+id/iv_pin_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/holocircle"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:id="@+id/iv_pin_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/holocircle"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:id="@+id/iv_pin_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/holocircle"
                    android:layout_margin="10dp"/>

            </LinearLayout>

            <View
                android:id="@+id/view_shadow"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@drawable/toolbar_dropshadow"/>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:columnCount="3"
                android:rowCount="4"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/bt_one"
                    android:text="@string/one_string"
                    android:onClick="onClickOneButton"
                    style="@style/KeypadButton"/>
                <Button
                    android:id="@+id/bt_two"
                    android:text="@string/two_string"
                    android:onClick="onClickTwoButton"
                    style="@style/KeypadButton"/>
                <Button
                    android:id="@+id/bt_three"
                    android:text="@string/three_string"
                    android:onClick="onClickThreeButton"
                    style="@style/KeypadButton"/>
                <Button
                    android:id="@+id/bt_four"
                    android:text="@string/four_string"
                    android:onClick="onClickFourButton"
                    style="@style/KeypadButton"/>
                <Button
                    android:id="@+id/bt_five"
                    android:text="@string/five_string"
                    android:onClick="onClickFiveButton"
                    style="@style/KeypadButton"/>
                <Button
                    android:id="@+id/bt_six"
                    android:text="@string/six_string"
                    android:onClick="onClickSixButton"
                    style="@style/KeypadButton"/>
                <Button
                    android:id="@+id/bt_seven"
                    android:text="@string/seven_string"
                    android:onClick="onClickSevenButton"
                    style="@style/KeypadButton"/>
                <Button
                    android:id="@+id/bt_eight"
                    android:text="@string/eight_string"
                    android:onClick="onClickEightButton"
                    style="@style/KeypadButton"/>
                <Button
                    android:id="@+id/bt_nine"
                    android:text="@string/nine_string"
                    android:onClick="onClickNineButton"
                    style="@style/KeypadButton"/>
                <ImageView
                    android:id="@+id/iv_backspace"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/backspace"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:layout_rowWeight="1"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:padding="10dp"
                    android:onClick="onClickBackSpaceButton"
                    tools:targetApi="lollipop" />
                <Button
                    android:id="@+id/bt_zero"
                    android:text="@string/zero_string"
                    android:onClick="onClickZeroButton"
                    style="@style/KeypadButton"/>
                <Button
                    android:id="@+id/bt_dot"
                    android:text="@string/dot_string"
                    android:onClick="onClickDotButton"
                    style="@style/KeypadButton"/>
            </GridLayout>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:elevation="5dp"
                android:cropToPadding="true"
                android:src="@drawable/forwardchevron"
                android:layout_margin="20dp"
                android:onClick="goToHome"
                android:padding="10dp"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
