<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.somu.darwinslab.ethereum.activity.ReceiveActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/commom_toolbar"
            layout="@layout/common_toolbar" />

        <RelativeLayout
            android:layout_below="@id/commom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            tools:context="com.somu.darwinassignmentapplication.activity.EnterPinActivity">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_ethereum_qr_code"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:paddingBottom="20dp"
                android:layout_marginTop="40dp"/>

            <RelativeLayout
                android:layout_below="@id/tv_header"
                android:id="@+id/iv_camera_square"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/squareshape">

                <fragment
                    android:id="@+id/barcode_scanner"
                    android:name="info.androidhive.barcode.BarcodeReader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:auto_focus="true"
                    app:use_flash="false" />

                <info.androidhive.barcode.ScannerOverlay
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#44000000"
                    app:line_color="@color/colordarkGreyForLine"
                    app:line_speed="8"
                    app:line_width="4"
                    app:square_height="@integer/scanner_rect_height"
                    app:square_width="@integer/scanner_rect_width"/>
            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_ethereum_address"
                android:textAllCaps="true"
                android:padding="20dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_ethereum_address"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectanglewithroundcorners"
                    android:layout_weight="1"
                    android:text=""
                    android:hint="@string/_0x3635774825368dd25"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:editable="false"/>

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/copyicon"
                    android:padding="5dp"
                    android:onClick="copyEthereumAddress"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
